traefik/auth/middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: auth

spec:
  forwardAuth:
    address: http://auth.traefik.svc.cluster.local/
    authResponseHeaders:
      - X-Showcase-User
