traefik/auth/soft-middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: auth-soft

spec:
  headers:
    customRequestHeaders:
      X-Forward-Auth-Type: soft
