traefik/auth/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth

spec:
  replicas: 1
  selector:
    matchLabels:
      app: auth
  template:
    metadata:
      labels:
        app: auth
    spec:
      enableServiceLinks: false
      containers:
        - name: auth
          image: traefik-forward-auth
          args:
            - --config=/auth.ini
          ports:
            - containerPort: 4181
              name: http
          volumeMounts:
            - name: config
              mountPath: /auth.ini
              subPath: auth.ini
      volumes:
        - name: config
          configMap:
            name: auth
