traefik/auth/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: auth

spec:
  type: ClusterIP
  selector:
    app: auth
  ports:
    - port: 80
      targetPort: http
      name: http
